force-app/main/default/objects/KimbleOne__TravelRequisition__c/KimbleOne__TravelRequisition__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Travel Requisition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Requisitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>