force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovalDate__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>