force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__ApprovedNetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovedNetAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approved Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>