force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__ItinerarySelectionReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ItinerarySelectionReason__c</fullName>
    <label>Selection Reason</label>
    <type>TextArea</type>
</CustomField>