force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Travel Requisitions</relationshipLabel>
    <relationshipName>TravelRequisitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>