force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Travel Requisitions</relationshipLabel>
    <relationshipName>TravelRequisitions</relationshipName>
    <type>Lookup</type>
</CustomField>