force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__ShortName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShortName__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>