force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__TravelFromDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelFromDate__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>