force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__TravelReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelReason__c</fullName>
    <label>Reason/Purpose</label>
    <type>TextArea</type>
</CustomField>