force-app/main/default/objects/KimbleOne__TravelRequisition__c/fields/KimbleOne__TravelToDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelToDate__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>