force-app/main/default/objects/KimbleOne__TravelRequisition__c/listViews/KimbleOne__MyTravelRequisitions.listView-meta.xml
<ListView>
    <fullName>KimbleOne__MyTravelRequisitions</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__TravelFromDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Travel Requisitions</label>
    <language>en_US</language>
</ListView>