force-app/main/default/objects/KimbleOne__TravelRequisition__c/listViews/KimbleOne__PendingItineraryApproval.listView-meta.xml
<ListView>
    <fullName>KimbleOne__PendingItineraryApproval</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__TravelFromDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>PendingItineraryApproval</value>
    </filters>
    <label>Pending Itinerary Approval</label>
    <language>en_US</language>
</ListView>